Bug 987067 - use different selector on Windows/Linux than on OS X for background tab clipping for pointer events, r=dao,MattN
UltraBlame original commit: 87a8e8c24bf9ac58dfca02cbbba13cddda59728b

--- a/browser/themes/osx/browser.css
+++ b/browser/themes/osx/browser.css
@@ -2851,6 +2851,16 @@ toolbarbutton.chevron > .toolbarbutton-menu-dropmarker {
 
 
 
+
+
+#main-window[tabsintitlebar]:not([inFullscreen]) .tab-background-middle:not([selected=true]) {
+  clip-path: url(chrome://browser/content/browser.xul#tab-hover-clip-path);
+}
+
+
+
+
+
 .tab-drop-indicator {
   list-style-image: url(chrome://browser/skin/tabbrowser/tabDragIndicator.png);
   margin-top: -2px;
